BUG x.x unreleased

CHANGES

New Features:

- Stack Promotions
	Added promotions possessed by at least one unit in a stack and how many have it when more than one

Improvements:

Bug Fixes:

- Strategy Layer
	Redrawn when loading a saved game while playing an active game
- City Screen
	Excess unhealthiness (eaten food) and unhappiness (angry population) are shown as red positive numbers

Merged Mods:


MODDING

New Features:

Improvements:

Bug Fixes:


____________________________________________________________________________________________________
BUG 4.4 released May 17th, 2010

CHANGES

New Features:

- BUG Plot List (Unit Icons)
	Completely rewritten code significantly speeds up drawing icons of large unit stacks
- Resource Deals
	Resource icons in active import/export columns on the RESOURCES tab of the Foreign Advisor 
	show the full deal they belong to and can be clicked to cancel the deal [BULL]

Improvements:

- Production Queue
	Items that have hammers invested already are drawn in cyan (projects only work with BULL)
- Customizable Domestic Advisor
	Added Draft Anger column
- Great Person Tech Prefs
	Added headings and limited Current and Future techs to those that can be researched
- Unit Naming
	Can use multiple counters for a single naming code
- Civ4lerts
	Worst Enemy alerts show the old enemy along with the new one
- BUG Button
	Added option to hide the button and moved it slightly left
- Translations
	Added several improved Spanish translations by Gerard

Bug Fixes:

- Random Events
	Fixed culture-level checking in Partisans random event; event is now possible on 3.19 and above
- Unit Naming
	Civilization name code uses adjective as described in hover help as opposed to noun form (English vs. England)
- Worst Enemy
	Fixed check in games with multiple players on a team
	Alert ignores human teams instead of AIs
- Civ4lerts
	City-related, Worst Enemy, and Refuses to Talk alerts work for each player in Hot Seat games